    It still remains as a 'default gem'.  [Feature #9612]
    Refer to ext/openssl/History.md for the full release note.

* optparse

  * Add an into option. [Feature #11191]

* pathname

  * New method: Pathname#empty? [Feature #12596]

* Readline

  * Readline.quoting_detection_proc and Readline.quoting_detection_proc=
    [Feature #12659]

* set

  * New methods: Set#compare_by_identity and Set#compare_by_identity?.
    [Feature #12210]

* WEBrick

  * Don't allow , as a separator [Bug #12791]

=== Compatibility issues (excluding feature bug fixes)

* Array#sum and Enumerable#sum are implemented.  [Feature #12217]
  Ruby itself has no compatibility problem because Ruby didn't have sum method
  for arrays before Ruby 2.4.
  However many third party gems, activesupport, facets, simple_stats, etc,
  defines sum method.  These implementations are mostly compatible but
  there are subtle differences.
  Ruby's sum method should be mostly compatible but it is impossible to
  be perfectly compatible with all of them.

* Fixnum and Bignum are unified into Integer  [Feature #12005]
  Fixnum class and Bignum class is removed.
  Integer class is changed from abstract class to concrete class.
  For example, 0 is an instance of Integer: 0.class returns Integer.
  The constants Fixnum and Bignum is bound to Integer.
  So obj.kind_of?(Fixnum) works as obj.kind_of?(Integer).
  At C-level, Fixnum object and Bignum object should be distinguished by
  FIXNUM_P(obj) and RB_TYPE_P(obj, T_BIGNUM).
  RUBY_INTEGER_UNIFICATION can be used to detect this feature at C-level.
  0.class == Integer can be used to detect this feature at Ruby-level.
  The C-level constants, rb_cFixnum and rb_cBignum, is removed.
  They can cause compilation failure.

* String/Symbol#upcase/downcase/swapcase/capitalize(!) now work for all of
  Unicode, not only for ASCII. [Feature #10085]
  No change is needed if the data is in ASCII anyway or if the limitation